--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 repositories {
-    // Use JCenter for resolving dependencies.
+    mavenCentral()
     jcenter()
 }
 
@@ -20,8 +20,7 @@ dependencies {
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13'
 
-    // This dependency is used by the application.
-    implementation 'com.google.guava:guava:29.0-jre'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
 }
 
